# QtGit

./: .gitignore  .gitmodules  CMakeLists.txt  QtGit_en_US.ts  README.md  compile_commands.json
src/: CMakeLists.txt  QtGit.qrc  brancheswidget.cpp  brancheswidget.ui  branchitem.cpp  branchitem.ui  logController.cpp  logController.hpp  logModel.cpp  logModel.hpp  main.cpp  mainWindow.cpp  mainwindow.cpp  stageModel.cpp  stageModel.hpp
src/include/QtGit/: brancheswidget.hpp  branchitem.hpp  mainWindow.hpp  mainwindow.hpp
src/qml/: GitLog.qml  GitLogDelegate.qml  GitLogDelegate.ui.qml  GitLogHeaderDelegate.qml  GitLogView.qml  KeyManagement.qml  MainWindow.qml  MainWindowForm.ui.qml  RepositoryView.qml  Stage.qml  StageForm.ui.qml  StageWindow.qml  StageWindowForm.ui.qml  main.qml  mainWindow.qml
